AgroBd-deployment/network/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: network-service
spec:
  selector:
    app: agrobd-laravel-app
  ports:
    - port: 80
      targetPort: 9000
